# net-streaming-recognition

./: CMakeLists.txt  DevelopmentManual.md  README.md  client.cc  net-streaming-receive-audio.py  net-streaming-send-audio.cc  server.py  simulated-streaming-recognition.py
cmake/: asio.cmake  portaudio.cmake
